2003-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Updated to Automake 1.8.
	* configure.ac: Set scripts to executable.

2003-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (uninstall-data-html): Pathnames were computed
	incorrectly so documentation directories were being left behind.
	* configure.ac: --without-frozenpaths is now the default.  This
	helps 'make distcheck' work and makes the package more portable.
	Path to gm was being incorrectly frozen when --without-frozenpaths
	was specified.
	* magick/delegate.c (ReadConfigureFile): Validate delegate paths
	prior to substitution.
	* rungm.sh.in (top_builddir): Use a more reliable scheme for
	computing location of source and build directories.
	* magick/Makefile.am: Improve include directory computation logic.
	* configure.ac: Don't override includedir.  Pass user-supplied LIBS
	to the linker.

2003-12-08  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/jpeg.c: store JPEG quality as "[jpeg_quality]" attribute.

2003-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: New script to support executing uninstalled
	executables.
	* magick/blob.c (GetConfigureBlob): New MAGICK_CONFIGURE_PATH
	environment variable allows the user to specify the search path
	for configuration (.mgk) files.

2003-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* index.html: Added a table showing current stable release and
	development version.

2003-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc (use): Describe the syntax of the -process
	argument.
	* acinclude.m4 (AC_CHECK_CC_OPT): Add quoting in AC_CHECK_CC_OPT
	definition.  Change suggested by Patrick Welche

2003-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfo): Fix preprocessing logic error
	which caused moby shared library build to not register static
	modules.

2003-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
