@@ -54,16 +54,16 @@ RUNENV = $(SHELL) $(top_builddir)/rungm.sh
 
 # FIXME: MinGW needs Windows path form of srcdir here (or pass as command argument)
 check:
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./exceptions
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./attributes
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./appendImages
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./averageImages
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./coalesceImages
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./coderInfo
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./color
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./colorHistogram > colorHistogram.txt
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./montageImages
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./morphImages
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./readWriteBlob
-	-@$(RUNENV) SRCDIR=$(SRCDIR) ./readWriteImages
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./exceptions
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./attributes
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./appendImages
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./averageImages
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./coalesceImages
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./coderInfo
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./color
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./colorHistogram > colorHistogram.txt
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./montageImages
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./morphImages
+	-@$(RUNENV) SRCDIR=$(SRCDIR) ./readWriteBlob # HP compiler fails on this one.
+	@$(RUNENV) SRCDIR=$(SRCDIR) ./readWriteImages
 
