@@ -8,7 +8,7 @@
 #
 #
 # Don't require all the GNU mandated files
-AUTOMAKE_OPTIONS = 1.7 foreign
+AUTOMAKE_OPTIONS = 1.8 foreign
 
 includedir = ${prefix}/include/GraphicsMagick
 pkgincludedir = $(includedir)/wand
