@@ -57,6 +57,8 @@
 
 <UL>
   <LI> Makefile.am: Updated to Automake 1.8.
+        (install-exec-perl): Fixes which achieve a successful
+        'make distcheck' for the first time in *Magick history.
   <LI> configure.ac: Set scripts to executable.
 
 </UL>
