@@ -1,6 +1,8 @@
 2003-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.am: Updated to Automake 1.8.
+	(install-exec-perl): Fixes which achieve a successful
+	'make distcheck' for the first time in *Magick history.
 	* configure.ac: Set scripts to executable.
 
 2003-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
